Added PyTorch EfficientNet Implementation (#1898)
- docker container for PyTorch EfficientNet
- Added build to docker-compose.yml
- model scripts
- runner and setup shell scripts
- helper for setting up ImageNet dataset
- README outlining script usage
- YAML tests (complete; container ones tested; baremetal untested)
- Outputs logs and summaries (both yaml and json) to output dir

Signed-off-by: Voas, Tanner <tanner.voas@intel.com>
Co-authored-by: Jitendra Patil <jitendra.patil@intel.com>

--- a/docker/flex-gpu/docker-compose.yml
+++ b/docker/flex-gpu/docker-compose.yml
@@ -67,6 +67,11 @@ services:
       dockerfile: docker/flex-gpu/tf-maskrcnn-inference/tf-flex-series-maskrcnn-inference.Dockerfile
     extends: tf-resnet50v1-5-inference
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-tf-flex-gpu-maskrcnn-inference
+  pytorch-efficientnet-inference:
+    build:
+      dockerfile: docker/flex-gpu/pytorch-efficientnet-inference/pytorch-flex-series-efficientnet-inference.Dockerfile
+    extends: pytorch-stable-diffusion-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-pytorch-flex-gpu-efficientnet-inference
   pytorch-yolov5-inference:
     build:
       dockerfile: docker/flex-gpu/pytorch-yolov5-inference/pytorch-flex-series-yolov5-inference.Dockerfile
