Wliao2/add hifi gan (#1709)
* add hifi-gan


Co-authored-by: Srikanth Ramakrishna <srikanth.ramakrishna@intel.com>
Co-authored-by: Mahathi Vatsal <mahathi.vatsal.salopanthula@intel.com>

--- a/docker/flex-gpu/docker-compose.yml
+++ b/docker/flex-gpu/docker-compose.yml
@@ -92,6 +92,11 @@ services:
       dockerfile: docker/flex-gpu/pytorch-distilbert-inference/pytorch-flex-series-distilbert-inference.Dockerfile
     extends: pytorch-stable-diffusion-inference
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-flex-gpu-distilbert-inference
+  pytorch-hifi-gan-inference:
+    build:
+      dockerfile: docker/flex-gpu/pytorch-hifi-gan-inference/pytorch-flex-series-hifi-gan-inference.Dockerfile
+    extends: pytorch-stable-diffusion-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-generation-pytorch-flex-gpu-hifi-gan-inference
   pytorch-fast-pitch-inference:
     build:
       dockerfile: docker/flex-gpu/pytorch-fast-pitch-inference/pytorch-flex-series-fast-pitch-inference.Dockerfile
