--- a/docker/flex-gpu/pytorch-efficientnet-inference/tests.yaml
+++ b/docker/flex-gpu/pytorch-efficientnet-inference/tests.yaml
@@ -31,6 +31,9 @@ bs001-s1-bf16amp-jittrace-b0:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with BATCH_SIZE greater than 1.
 #Unique coverage: None, just baseline on BATCH_SIZE > 1
 bs064-s1-bf16amp-jittrace-b0:
@@ -50,6 +53,9 @@ bs064-s1-bf16amp-jittrace-b0:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with BATCH_SIZE greater than NUM_IMAGES.
 #Unique coverage: NUM_IMAGES should be increased internally to be at least equal to BATCH_SIZE
 bs256-s1-bf16amp-jittrace-b0:
@@ -69,6 +75,9 @@ bs256-s1-bf16amp-jittrace-b0:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with STREAMS greater than 1.
 #Unique coverage: STREAMS equal to 2
 bs064-s2-bf16amp-jittrace-b0:
@@ -88,6 +97,9 @@ bs064-s2-bf16amp-jittrace-b0:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #More streams than previous test. Previous test was a multi-stream baseline. This is to stress it (moderately).
 #Unique coverage: STREAMS equal to 4
 bs064-s4-bf16amp-jittrace-b0:
@@ -107,6 +119,9 @@ bs064-s4-bf16amp-jittrace-b0:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with PRECISION equal to FP16.
 #Unique coverage: PRECISION equal to FP16
 bs064-s1-fp16amp-jittrace-b0:
@@ -126,6 +141,9 @@ bs064-s1-fp16amp-jittrace-b0:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with PRECISION equal to FP32.
 #Unique coverage: PRECISION equal to FP32
 bs064-s1-fp32amp-jittrace-b0:
@@ -145,6 +163,9 @@ bs064-s1-fp32amp-jittrace-b0:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with MODEL_NAME equal to efficientnet_b3
 #Unique coverage: Only efficientnet_b3 coverage
 bs064-s1-fp32amp-jittrace-b3:
@@ -164,6 +185,9 @@ bs064-s1-fp32amp-jittrace-b3:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with MODEL_NAME equal to efficientnet_b4
 #Unique coverage: Only efficientnet_b4 coverage
 bs064-s1-fp32amp-jittrace-b4:
@@ -183,6 +207,9 @@ bs064-s1-fp32amp-jittrace-b4:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with AMP disabled
 #Unique coverage: Only test with jit trace and no amp
 bs064-s1-bf16noamp-jittrace-b0:
@@ -202,6 +229,9 @@ bs064-s1-bf16noamp-jittrace-b0:
     AMP: 'no'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with JIT set to script
 #Unique coverage: Only test with jit script and amp
 bs064-s1-bf16amp-jitscript-b0:
@@ -221,6 +251,9 @@ bs064-s1-bf16amp-jitscript-b0:
     AMP: 'yes'
     JIT: 'script'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test with JIT set to script and AMP set to no
 #Unique coverage: Only test with jit script and no amp
 bs064-s1-bf16noamp-jitscript-b0:
@@ -240,6 +273,9 @@ bs064-s1-bf16noamp-jitscript-b0:
     AMP: 'no'
     JIT: 'script'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
 #Initial test model save
 #Unique coverage: Nothing unique. Just baseline for subsequent test.
 bs064-s1-bf16amp-jittrace-b0-save:
@@ -278,3 +314,6 @@ bs064-s1-bf16amp-jittrace-b0-saveandload:
     AMP: 'yes'
     JIT: 'trace'
     OUTPUT_DIR: '/tmp'
+  volumes:
+    - src: /tmp
+      dst: /tmp
