--- a/docker/max-gpu/docker-compose.yml
+++ b/docker/max-gpu/docker-compose.yml
@@ -116,6 +116,29 @@ services:
       dockerfile: docker/max-gpu/pytorch-stable-diffusion-inference/pytorch-max-series-stable-diffusion-inference.Dockerfile
     extends: pytorch-resnet50v1-5-inference
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-generative-ai-pytorch-max-gpu-stable-diffusion-inference
+  pytorch-rnnt-inference:
+    build:
+      dockerfile: docker/max-gpu/pytorch-rnnt-inference/pytorch-max-series-rnnt-inference.Dockerfile
+    extends: pytorch-resnet50v1-5-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-recognition-pytorch-max-gpu-rnnt-inference
+  pytorch-rnnt-training:
+    build:
+      dockerfile: docker/max-gpu/pytorch-rnnt-training/pytorch-max-series-rnnt-training.Dockerfile
+    extends: pytorch-resnet50v1-5-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-recognition-pytorch-max-gpu-rnnt-training
+  pytorch-gpt-j-6b-mlperf-inference:
+    build:
+      context: ../../
+      args:
+        http_proxy: ${http_proxy}
+        https_proxy: ${https_proxy}
+        no_proxy: ''
+        NO_PROXY: ''
+        BASE_IMAGE: intel/oneapi-basekit
+        BASE_TAG: ${BASE_TAG:-2023.1.0-devel-ubuntu22.04}
+        PYTHON: python3.9
+      dockerfile: docker/max-gpu/pytorch-gpt-j-6b-mlperf-inference/pytorch-max-series-gpt-j-6b-mlperf-inference.Dockerfile
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-generative-ai-pytorch-max-gpu-gptj-6b-inference
   # pytorch-gpt-j-6b-mlperf-inference:
   #   build:
   #     context: ../../
