--- a/docker/flex-gpu/pytorch-yolov5-inference/tests.yaml
+++ b/docker/flex-gpu/pytorch-yolov5-inference/tests.yaml
@@ -1,30 +1,38 @@
-170-batch-inference:
+bs064-s1-fp16-yolov5m:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-object-detection-pytorch-flex-gpu-yolov5-inference
   cmd: bash run_model.sh
   ipc: host
   device: /dev/dri
-  env: 
-    BATCH_SIZE: '32'
-    NUM_ITERATIONS: '500'
-    PRECISION: fp16
-    MULTI_TILE: 'False'
-    PLATFORM: 'Flex'
-    OUTPUT_DIR: /tmp
+  cap_add: SYS_NICE
+  env:
+    BATCH_SIZE: '64'
+    STREAMS: '1'
+    MODEL_NAME: 'yolov5m'
+    NUM_ITERATIONS: '2000'
+    NUM_IMAGES: '1'
+    DUMMY: 'yes'
+    PRECISION: 'fp16'
+    JIT: 'trace'
+    OUTPUT_DIR: '/tmp'  
   volumes:
     - src: /tmp
       dst: /tmp
-170-online-inference:
+bs064-s4-fp16-yolov5m:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-object-detection-pytorch-flex-gpu-yolov5-inference
-  cmd: bash run_model.sh
+  cmd: bash run_model.sh 
   ipc: host
   device: /dev/dri
-  env: 
-    BATCH_SIZE: '1'
-    NUM_ITERATIONS: '5000'
-    PRECISION: fp16
-    MULTI_TILE: 'False'
-    PLATFORM: 'Flex'
-    OUTPUT_DIR: /tmp
+  cap_add: SYS_NICE
+  env:
+    BATCH_SIZE: '64'
+    STREAMS: '4'
+    MODEL_NAME: 'yolov5m'
+    NUM_ITERATIONS: '500'
+    NUM_IMAGES: '64'
+    DUMMY: 'yes'
+    PRECISION: 'fp16'
+    JIT: 'trace'
+    OUTPUT_DIR: '/tmp'
   volumes:
     - src: /tmp
       dst: /tmp
