--- a/docker/flex-gpu/tf-wide-deep-large-inference/tests.yaml
+++ b/docker/flex-gpu/tf-wide-deep-large-inference/tests.yaml
@@ -14,6 +14,8 @@ fp16-flex170-10000-batch-inference:
       dst: /local_dateset/datasets/wide_deep_large/data/eval_preprocessed_eval.tfrecords
     - src: /local_dateset/datasets/wide_deep_large/wide_deep_fp16_pretrained_model.pb
       dst: /local_dateset/datasets/wide_deep_large/wide_deep_fp16_pretrained_model.pb
+    - src: /tmp
+      dst: /tmp
 fp16-flex140-10000-batch-inference:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-flex-gpu-wide-deep-large-inference
   cmd: bash run_model.sh
@@ -31,3 +33,5 @@ fp16-flex140-10000-batch-inference:
       dst: /local_dateset/datasets/wide_deep_large/data/eval_preprocessed_eval.tfrecords
     - src: /local_dateset/datasets/wide_deep_large/wide_deep_fp16_pretrained_model.pb
       dst: /local_dateset/datasets/wide_deep_large/wide_deep_fp16_pretrained_model.pb
+    - src: /tmp
+      dst: /tmp
