--- a/docker/max-gpu/tf-bert-large-training/tests.yaml
+++ b/docker/max-gpu/tf-bert-large-training/tests.yaml
@@ -1,4 +1,4 @@
-single-tile-training:
+single-tile-bf16-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-tf-max-gpu-bert-large-training
   cmd: bash run_model.sh
   ipc: host
@@ -13,11 +13,13 @@ single-tile-training:
       dst: /local_dateset/bert_small_data/bert-large-training/
     - src: /dev/dri/by-path
       dst: /dev/dri/by-path
-multi-tile-training:
+    - src: /tmp
+      dst: /tmp
+multi-tile-bf16-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-tf-max-gpu-bert-large-training
   cmd: bash run_model.sh
-  ipc: host
   device: /dev/dri
+  shm_size: 20G
   env:
     DATA_DIR: /local_dateset/bert_small_data/bert-large-training/
     RESULTS_DIR: /tmp
@@ -28,3 +30,73 @@ multi-tile-training:
       dst: /local_dateset/bert_small_data/bert-large-training/
     - src: /dev/dri/by-path
       dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
+single-tile-fp32-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-tf-max-gpu-bert-large-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    DATA_DIR: /local_dateset/bert_small_data/bert-large-training/
+    RESULTS_DIR: /tmp
+    DATATYPE: fp32
+    MULTI_TILE: 'False'
+  volumes:
+    - src: /local_dateset/bert_small_data/bert-large-training/
+      dst: /local_dateset/bert_small_data/bert-large-training/
+    - src: /dev/dri/by-path
+      dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
+multi-tile-fp32-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-tf-max-gpu-bert-large-training
+  cmd: bash run_model.sh
+  device: /dev/dri
+  shm_size: 20G
+  env:
+    DATA_DIR: /local_dateset/bert_small_data/bert-large-training/
+    RESULTS_DIR: /tmp
+    DATATYPE: fp32
+    MULTI_TILE: 'True'
+  volumes:
+    - src: /local_dateset/bert_small_data/bert-large-training/
+      dst: /local_dateset/bert_small_data/bert-large-training/
+    - src: /dev/dri/by-path
+      dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
+single-tile-tf32-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-tf-max-gpu-bert-large-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    DATA_DIR: /local_dateset/bert_small_data/bert-large-training/
+    RESULTS_DIR: /tmp
+    DATATYPE: tf32
+    MULTI_TILE: 'False'
+  volumes:
+    - src: /local_dateset/bert_small_data/bert-large-training/
+      dst: /local_dateset/bert_small_data/bert-large-training/
+    - src: /dev/dri/by-path
+      dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
+multi-tile-tf32-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-tf-max-gpu-bert-large-training
+  cmd: bash run_model.sh
+  device: /dev/dri
+  shm_size: 20G
+  env:
+    DATA_DIR: /local_dateset/bert_small_data/bert-large-training/
+    RESULTS_DIR: /tmp
+    DATATYPE: tf32
+    MULTI_TILE: 'True'
+  volumes:
+    - src: /local_dateset/bert_small_data/bert-large-training/
+      dst: /local_dateset/bert_small_data/bert-large-training/
+    - src: /dev/dri/by-path
+      dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
