--- a/docker/max-gpu/tf-maskrcnn-training/tests.yaml
+++ b/docker/max-gpu/tf-maskrcnn-training/tests.yaml
@@ -1,4 +1,4 @@
-single-tile-training:
+single-tile-bf16-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-tf-max-gpu-maskrcnn-training
   ipc: host
   cmd: mpirun -np 1 -prepend-rank -ppn 1 bash run_model.sh
@@ -18,12 +18,51 @@ single-tile-training:
       dst: /dev/dri/by-path
     - src: /tmp
       dst: /tmp
-multi-tile-training:
+multi-tile-bf16-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-tf-max-gpu-maskrcnn-training
   cmd: bash run_model.sh
   device: /dev/dri
   env:
     PRECISION: bfloat16
+    EPOCHS: '1'
+    STEPS_PER_EPOCH: '200'
+    BATCH_SIZE: '4'
+    MULTI_TILE: 'True'
+    OUTPUT_DIR: /tmp
+    DATASET_DIR: /tf_dataset/dataset/coco_dataset/COCO2017_training_data/
+  volumes:
+    - src: /tf_dataset/dataset/coco_dataset/COCO2017_training_data/
+      dst: /tf_dataset/dataset/coco_dataset/COCO2017_training_data/
+    - src: /dev/dri
+      dst: /dev/dri
+    - src: /tmp
+      dst: /tmp
+single-tile-fp32-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-tf-max-gpu-maskrcnn-training
+  ipc: host
+  cmd: mpirun -np 1 -prepend-rank -ppn 1 bash run_model.sh
+  device: /dev/dri
+  env:
+    PRECISION: fp32
+    EPOCHS: '1'
+    STEPS_PER_EPOCH: '20'
+    BATCH_SIZE: '4'
+    MULTI_TILE: 'False'
+    OUTPUT_DIR: /tmp
+    DATASET_DIR: /tf_dataset/dataset/coco_dataset/COCO2017_training_data/
+  volumes:
+    - src: /tf_dataset/dataset/coco_dataset/COCO2017_training_data/
+      dst: /tf_dataset/dataset/coco_dataset/COCO2017_training_data/
+    - src: /dev/dri/by-path
+      dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
+multi-tile-fp32-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-tf-max-gpu-maskrcnn-training
+  cmd: bash run_model.sh
+  device: /dev/dri
+  env:
+    PRECISION: fp32
     EPOCHS: '1'
     STEPS_PER_EPOCH: '20'
     BATCH_SIZE: '4'
