--- a/docker/max-gpu/tf-resnet50v1-5-training/tests.yaml
+++ b/docker/max-gpu/tf-resnet50v1-5-training/tests.yaml
@@ -1,4 +1,4 @@
-single-tile-real-data-training:
+single-tile-bf16-real-data-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
   cmd: bash run_model.sh
   ipc: host
@@ -11,7 +11,9 @@ single-tile-real-data-training:
   volumes:
     - src: /tf_dataset/dataset/TF_Imagenet_FullData
       dst: /tf_dataset/dataset/TF_Imagenet_FullData
-single-tile-dummy-data-training:
+    - src: /tmp
+      dst: /tmp
+single-tile-bf16-dummy-data-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
   cmd: bash run_model.sh
   ipc: host
@@ -20,7 +22,10 @@ single-tile-dummy-data-training:
     CONFIG_FILE: /workspace/tf-max-series-resnet50v1-5-training/models/configure/itex_dummy_bf16.yaml
     MULTI_TILE: 'False'
     OUTPUT_DIR: /tmp
-multi-tile-real-data-training:
+  volumes:
+    - src: /tmp
+      dst: /tmp
+multi-tile-bf16-real-data-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
   cmd: bash run_model.sh
   ipc: host
@@ -35,7 +40,9 @@ multi-tile-real-data-training:
       dst: /tf_dataset/dataset/TF_Imagenet_FullData
     - src: /dev/dri/by-path
       dst: /dev/dri/by-path
-multi-tile-dummy-data-training:
+    - src: /tmp
+      dst: /tmp
+multi-tile-bf16-dummy-data-training:
   img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
   cmd: bash run_model.sh
   ipc: host
@@ -47,3 +54,63 @@ multi-tile-dummy-data-training:
   volumes:
     - src: /dev/dri/by-path
       dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
+single-tile-fp32-real-data-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    CONFIG_FILE: /workspace/tf-max-series-resnet50v1-5-training/models/configure/itex_fp32.yaml
+    MULTI_TILE: 'False'
+    OUTPUT_DIR: /tmp
+    DATASET_DIR: /tf_dataset/dataset/TF_Imagenet_FullData
+  volumes:
+    - src: /tf_dataset/dataset/TF_Imagenet_FullData
+      dst: /tf_dataset/dataset/TF_Imagenet_FullData
+    - src: /tmp
+      dst: /tmp
+single-tile-fp32-dummy-data-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    CONFIG_FILE: /workspace/tf-max-series-resnet50v1-5-training/models/configure/itex_dummy_fp32.yaml
+    MULTI_TILE: 'False'
+    OUTPUT_DIR: /tmp
+  volumes:
+    - src: /tmp
+      dst: /tmp
+multi-tile-fp32-real-data-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    CONFIG_FILE: /workspace/tf-max-series-resnet50v1-5-training/models/hvd_configure/itex_fp32_lars.yaml
+    MULTI_TILE: 'True'
+    OUTPUT_DIR: /tmp
+    DATASET_DIR: /tf_dataset/dataset/TF_Imagenet_FullData
+  volumes:
+    - src: /tf_dataset/dataset/TF_Imagenet_FullData
+      dst: /tf_dataset/dataset/TF_Imagenet_FullData
+    - src: /dev/dri/by-path
+      dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
+multi-tile-fp32-dummy-data-training:
+  img: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-recognition-tf-max-gpu-resnet50v1-5-training
+  cmd: bash run_model.sh
+  ipc: host
+  device: /dev/dri
+  env:
+    CONFIG_FILE: /workspace/tf-max-series-resnet50v1-5-training/models/hvd_configure/itex_dummy_fp32_lars.yaml
+    MULTI_TILE: 'True'
+    OUTPUT_DIR: /tmp
+  volumes:
+    - src: /dev/dri/by-path
+      dst: /dev/dri/by-path
+    - src: /tmp
+      dst: /tmp
