--- a/models_v2/pytorch/efficientnet/inference/gpu/tests.yaml
+++ b/models_v2/pytorch/efficientnet/inference/gpu/tests.yaml
@@ -8,8 +8,7 @@ bs001-s1-bf16-b0:
     BATCH_SIZE: '1'
     STREAMS: '1'
     MODEL_NAME: 'efficientnet_b0'
-    NUM_ITERATIONS: '16'
-    NUM_IMAGES: '64'
+    NUM_INPUTS: '64'
     DUMMY: 'yes'
     PRECISION: 'bf16'
     AMP: 'yes'
