Yolov5 Time Based (#2101)
* Fixed dummy dataset for multiple images
* Updated inference loop to time based
* s/NUM_IMAGES/NUM_INPUTS/ to align with other samples (EfficientNet, RIFE, IFRNET)
* Dropped NUM_ITERATIONS
* Added MIN_TEST_DURATION and MAX_TEST_DURATION
* Dropped --jit script and --jit none options since sample achieves best perf with jit.trace
* Updated Readme

--- a/docker/flex-gpu/pytorch-yolov5-inference/tests.yaml
+++ b/docker/flex-gpu/pytorch-yolov5-inference/tests.yaml
@@ -8,8 +8,9 @@ bs064-s1-fp16-yolov5m:
     BATCH_SIZE: '64'
     STREAMS: '1'
     MODEL_NAME: 'yolov5m'
-    NUM_ITERATIONS: '2000'
-    NUM_IMAGES: '1'
+    NUM_INPUTS: '1'
+    MAX_TEST_DURATION: '60'
+    MIN_TEST_DURATION: '60'
     DUMMY: 'yes'
     PRECISION: 'fp16'
     JIT: 'trace'
@@ -30,8 +31,9 @@ bs064-s4-fp16-yolov5m:
     BATCH_SIZE: '64'
     STREAMS: '4'
     MODEL_NAME: 'yolov5m'
-    NUM_ITERATIONS: '500'
-    NUM_IMAGES: '64'
+    NUM_INPUTS: '64'
+    MAX_TEST_DURATION: '60'
+    MIN_TEST_DURATION: '60'
     DUMMY: 'yes'
     PRECISION: 'fp16'
     JIT: 'trace'
