--- a/models/object_detection/tensorflow/yolov5/inference/data/coco.yaml
+++ b/models/object_detection/tensorflow/yolov5/inference/data/coco.yaml
@@ -1,10 +1,22 @@
+#
+# -*- coding: utf-8 -*-
+#
+# Copyright (c) 2024 Intel Corporation
+#
+# AGPL-3.0 license
+#
 # YOLOv5 🚀 by Ultralytics, AGPL-3.0 license
 # COCO 2017 dataset http://cocodataset.org by Microsoft
+# Example usage: python train.py --data coco.yaml
+# parent
+# ├── yolov5
+# └── datasets
+#     └── coco  ← downloads here (20.1 GB)
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: data # dataset root dir
-train: images/val2017 # train images (relative to 'path') 118287 images
-val: images/val2017 # val images (relative to 'path') 5000 images
+path: datasets/coco # dataset root dir
+# train: train2017.txt # train images (relative to 'path') 118287 images
+val: val2017.txt # val images (relative to 'path') 5000 images
 # test: test-dev2017.txt # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
 
 # Classes
@@ -90,3 +102,17 @@ names:
   78: hair drier
   79: toothbrush
 
+# Download script/URL (optional)
+download: |
+  from utils.general import download, Path
+
+
+  # Download labels
+  dir = Path(yaml['path'])  # dataset root dir
+  url = 'https://github.com/ultralytics/yolov5/releases/download/v1.0/'
+  urls = [url + ('coco2017labels.zip')]  # labels
+  download(urls, dir=dir.parent)
+
+  # Download data
+  urls = ['http://images.cocodataset.org/zips/val2017.zip']  # 1G, 5k images]
+  download(urls, dir=dir / 'images', threads=3)
