Sort and uniq all requirements.txt files for better dependency add or removal (#2163)
* sorts and uniq all requirements.txt files for better dependency add or removal

* one last file to sort and uniq

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

* Remove empty lines near the top of files

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

---------

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/docs/notebooks/transfer_learning/requirements.txt
+++ b/docs/notebooks/transfer_learning/requirements.txt
@@ -1,8 +1,8 @@
-accelerate>=0.20.1
-Pillow~=10.2.0 # upgraded to fix CVEs
 PyYAML~=6.0
+accelerate>=0.20.1
 charset-normalizer~=3.1.0
 datasets~=2.12.0
+evaluate==0.4.0
 fsspec~=2023.9.2
 gin-config~=0.5.0
 intel-extension-for-pytorch==1.13.100
@@ -18,6 +18,7 @@ notebook~=7.0.7
 numpy~=1.23.5
 opencv-python~=4.7.0.72
 pandas~=2.0.1
+pillow>=10.3.0# upgraded to fix CVEs
 psutil~=5.9.5
 pycocotools~=2.0.6
 scikit-learn~=1.2.2
@@ -32,4 +33,3 @@ torchvision==0.14.1
 transformers~=4.36.0
 urllib3~=2.0.2
 wget~=3.2
-evaluate==0.4.0
