--- a/models_v2/tensorflow/3d_unet/training/gpu/requirements.txt
+++ b/models_v2/tensorflow/3d_unet/training/gpu/requirements.txt
@@ -14,5 +14,6 @@
 # limitations under the License.
 #
 
-tfa-nightly
 git+https://github.com/NVIDIA/dllogger
+intel-optimization-for-horovod==0.28.1.4
+tfa-nightly
