--- a/models_v2/tensorflow/maskrcnn/training/gpu/requirements.txt
+++ b/models_v2/tensorflow/maskrcnn/training/gpu/requirements.txt
@@ -17,7 +17,8 @@
 #
 #
 
+-e "git+https://github.com/NVIDIA/dllogger#egg=dllogger"
+intel-optimization-for-horovod==0.28.1.4
 opencv-python-headless
 pybind11
 pycocotools
--e "git+https://github.com/NVIDIA/dllogger#egg=dllogger"
