--- a/benchmarks/image_segmentation/tensorflow/3d_unet_mlperf/requirements.txt
+++ b/benchmarks/image_segmentation/tensorflow/3d_unet_mlperf/requirements.txt
@@ -1,17 +1,17 @@
-numpy>=1.20,<=1.23
-nilearn==0.7.1
-tables==3.7.0
+SimpleITK==2.2.1
+batchgenerators==0.24
+dicom2nifti
+matplotlib
+medpy
 nibabel==3.2.1
-SimpleITK==2.2.0
+nilearn==0.7.1
 nnunet
+numpy==1.23.5
+pandas
+scikit-image
+scikit-learn
+scipy
+tables
 torch==1.13.1
 tqdm
-dicom2nifti
-scikit-image
-medpy
-scipy
-batchgenerators==0.24
-scikit-learn
-pandas
-matplotlib
 wheel==0.38.0 # Included this to avoid a vulnerability
