--- a/models_v2/tensorflow/resnet50v1_5/training/gpu/requirements.txt
+++ b/models_v2/tensorflow/resnet50v1_5/training/gpu/requirements.txt
@@ -1,7 +1,9 @@
-gin 
-gin-config 
-tfa-nightly 
-tensorflow-model-optimization 
-tensorflow-datasets
+gin
+gin-config
+intel-optimization-for-horovod==0.28.1.4
 protobuf==3.20.3
 pyyaml
+tensorflow-datasets
+tensorflow-model-optimization
+tf-keras==2.15.0
+tfa-nightly
