--- a/benchmarks/object_detection/tensorflow/ssd-resnet34/requirements.txt
+++ b/benchmarks/object_detection/tensorflow/ssd-resnet34/requirements.txt
@@ -7,6 +7,6 @@ notebook>=6.1.5
 opencv-python
 pillow>=9.3.0
 pycocotools
-pygments>=2.7.4 # not directly required, pinned by Snyk to avoid a vulnerability
+pygments>=2.7.4 # upgraded to avoid a vulnerability
 tensorflow-addons
 tf_slim
