--- a/benchmarks/object_detection/tensorflow_serving/ssd-mobilenet/inference/fp32/requirements.txt
+++ b/benchmarks/object_detection/tensorflow_serving/ssd-mobilenet/inference/fp32/requirements.txt
@@ -1,6 +1,3 @@
-# grpc, tensorflow-serving-api is removed until version is fixed to avoid a vulnerability
-# object detection api
-# rest
 Cython
 absl-py
 contextlib2
@@ -9,5 +6,5 @@ lxml
 matplotlib
 notebook>=6.1.5
 pillow>=9.3.0
-pygments>=2.7.4 # not directly required, pinned by Snyk to avoid a vulnerability
+pygments>=2.7.4 # upgraded to avoid a vulnerability
 requests
