--- a/models/language_modeling/pytorch/rnnt/training/cpu/requirements.txt
+++ b/models/language_modeling/pytorch/rnnt/training/cpu/requirements.txt
@@ -6,6 +6,6 @@ soundfile
 sox
 tensorboard==2.0.0
 toml
-tqdm==4.41.0
-wheel==0.38.0 # Included this to avoid a vulnerability
+tqdm==4.66.3
+wheel==0.38.0 # upgraded to avoid a vulnerability
 wrapt==1.10.11
