--- a/models/language_modeling/tensorflow/bert_large/inference/gpu/requirements.txt
+++ b/models/language_modeling/tensorflow/bert_large/inference/gpu/requirements.txt
@@ -1,2 +1,1 @@
-# tensorflow-gpu  >= 1.11.0 # GPU version of TensorFlow.
-intel-tensorflow>=2.5.0 # CPU Version of TensorFlow.
+intel-tensorflow>=2.5.0
