--- a/models/object_detection/tensorflow/yolov5/inference/requirements.txt
+++ b/models/object_detection/tensorflow/yolov5/inference/requirements.txt
@@ -40,7 +40,7 @@ seaborn>=0.11.0
 
 # Deploy ----------------------------------------------------------------------
 # tritonclient[all]~=2.24.0
-setuptools>=65.5.1 # Snyk vulnerability fix
+setuptools>=65.5.1 # upgraded to avoid a vulnerability
 
 # Extras ----------------------------------------------------------------------
 # albumentations>=1.0.3
