--- a/quickstart/language_modeling/pytorch/t5/inference/cpu/requirements.txt
+++ b/quickstart/language_modeling/pytorch/t5/inference/cpu/requirements.txt
@@ -1,8 +1,8 @@
 accelerate
-datasets >= 1.8.0
+datasets>=1.8.0
 protobuf
 py7zr
-sacrebleu >= 1.4.12
+sacrebleu>=1.4.12
 scipy
-sentencepiece != 0.1.92
-wheel==0.38.0 # Included this to avoid a vulnerability
+sentencepiece!=0.1.92
+wheel==0.38.0 # upgraded to avoid a vulnerability
