--- a/quickstart/recommendation/pytorch/memrec_dlrm/requirements.txt
+++ b/quickstart/recommendation/pytorch/memrec_dlrm/requirements.txt
@@ -6,5 +6,5 @@ scikit-learn==1.3.0
 tensorboard==2.14.0
 torch==2.0.1
 torchviz==0.0.2
-tqdm==4.66.1
-wheel==0.38.1
+tqdm==4.66.3
+wheel==0.38.1 # upgraded to avoid a vulnerability
