--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -4,12 +4,12 @@ on:
     inputs:
       target_branch:
         description: 'Model Zoo branch name'
-        default: 'develop'
+        default: 'r3.2'
         required: true
         type: string
       mz_version:
         description: 'Model Zoo version'
-        default: '3.1.1'
+        default: '3.2'
         required: true
         type: string
       aikit_release:
