--- a/docker/pyt-cpu/docker-compose.yml
+++ b/docker/pyt-cpu/docker-compose.yml
@@ -213,3 +213,14 @@ services:
       dockerfile: docker/pyt-cpu/bert-large-training/pytorch-bert-large-training.Dockerfile-${OS:-ubuntu}
     command: >
       bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
+  yolov7-inference:
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-object-detection-yolov7-inference
+    pull_policy: always
+    build:
+      context: ../../
+      args: 
+        BASE_TAG: srf-${BASE_IMAGE_NAME:-ubuntu}-${BASE_IMAGE_TAG:-22.04}-pyt-2.3-py310
+      dockerfile: docker/pyt-cpu/yolov7-inference/pytorch-yolov7-inference.Dockerfile-${BASE_IMAGE_NAME:-ubuntu}
+    extends: bert-large-training
+    command: >
+      bash -c "python -c 'import torch; import intel_extension_for_pytorch as ipex; print(\"torch:\", torch.__version__, \" ipex:\",ipex.__version__)'"
